--- a/css/style.css
+++ b/css/style.css
@@ -296,7 +296,7 @@ input[type="text"]:focus, input[type="email"]:focus, input[type="password"]:focu
 \*------------------------------------*/
 
 #nav {
-    padding: 10px 0px;
+   
     background: #FFF;
     -webkit-transition: 0.2s padding;
     transition: 0.2s padding;
@@ -327,7 +327,7 @@ input[type="text"]:focus, input[type="email"]:focus, input[type="password"]:focu
 
 @media only screen and (min-width: 768px) {
     .main-nav li {
-        padding: 0px 15px;
+       
     }
     .main-nav li a {
         font-size: 14px;
@@ -336,7 +336,7 @@ input[type="text"]:focus, input[type="email"]:focus, input[type="password"]:focu
     }
     .main-nav>li>a {
         color: #10161A;
-        padding: 15px 0px;
+        
     }
     #nav.nav-transparent:not(.fixed-nav) .main-nav>li>a {
         color: #fff;
@@ -1750,4 +1750,33 @@ header {
     -webkit-transform:scale(0);
             transform:scale(0);
   }
+}
+
+
+
+#main-nav-erfan {
+ 
+}
+
+#main-nav-erfan ul {
+  
+}
+
+#main-nav-erfan li {
+ 
+}
+
+#main-nav-erfan a {
+  padding-left: 10px;
+  padding-right: 10px;
+  padding-top: 40px;
+  padding-bottom: 40px;
+  display: block;
+
+ 
+}
+
+#main-nav-erfan a:hover {
+  background-color: #82ACFD;
+  color:white;
 }
