--- a/css/style.css
+++ b/css/style.css
@@ -1777,7 +1777,7 @@ header {
 }
 
 #main-nav-erfan a:hover {
-  background-color: #82ACFD;
+  background-color: #638FE3; /*#82ACFD*/
   color:white;
 }
 
