--- a/css/style.css
+++ b/css/style.css
@@ -1785,3 +1785,9 @@ header {
      padding-top: 10px;
   padding-bottom: 10px;
 }
+
+
+#justepy {
+    text-align: justify;
+    text-justify: inter-word;
+}
